--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -11,4 +11,8 @@
     <a class="list-group-item list-group-item-action list-group-item-action p-3 nav-link sidebar"
       [routerLink]="['/filter/map']"  >Muestra Filter y Map</a>
 </div>
+<div class="list-group list-group-flush sidebar">
+  <a class="list-group-item list-group-item-action list-group-item-action p-3 nav-link sidebar"
+    [routerLink]="['/pipeasync']"  >Muestra Pipe Async</a>
+</div>
 </div>
